--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,6 @@ ul {
 
 a {
   text-decoration: none !important;
-  color: #060606;
 }
 
 p {
@@ -279,6 +278,7 @@ header {
   display: block;
 }
 .grow__right__content__item h4 a {
+  color: #060606;
   transition: all 0.5s;
 }
 .grow__right__content__item h4:hover a {
@@ -391,7 +391,7 @@ header {
 }
 
 .product {
-  margin-bottom: 1.5em;
+  padding-bottom: 5em !important;
 }
 .product__content {
   margin: 0;
@@ -535,6 +535,9 @@ header {
   text-transform: uppercase;
   color: #060606;
 }
+.footer__item p a {
+  color: #707070;
+}
 .footer__item__contact form input {
   width: 80%;
   padding: 12px 16px;
@@ -596,7 +599,12 @@ header {
 }
 
 #switchButton .fa-sun {
+  color: #000;
   display: none;
+}
+
+#switchButton .fa-moon {
+  color: #000;
 }
 
 .dark {
@@ -604,15 +612,86 @@ header {
 }
 
 .dark #switchButton .fa-sun {
+  color: #000;
   display: block;
 }
 
 .dark #switchButton .fa-moon {
+  color: #000;
   display: none;
+}
+
+.dark .title h3 {
+  color: #fff;
+}
+.dark .title p {
+  color: #B7B7B7;
+}
+
+.dark .carouselLeft__content .farm-text {
+  color: #0b0d0e;
+}
+.dark .carouselLeft__content-content h3 {
+  color: #fff;
+}
+.dark .carouselLeft__content-content p {
+  color: #B7B7B7;
 }
 
 .dark .grow__right__content__item {
   background-color: #222222;
+  box-shadow: 0 1rem 3rem rgb(23, 19, 19);
+  transition: all 0.3s;
+}
+.dark .grow__right__content__item h4 a {
+  color: #fff;
+}
+.dark .grow__right__content__item h4 a:hover {
+  color: #009f4d;
+}
+.dark .grow__right__content__item:hover {
+  box-shadow: 0 25px 98px 0 rgba(0, 0, 0, 0.1);
+}
+
+.dark .card-body {
+  background-color: #222222;
+}
+.dark .card-body a {
+  color: #fff;
+}
+.dark .card-body a:hover {
+  color: #009f4d;
+}
+.dark .card-body p {
+  color: #B7B7B7;
+}
+
+.dark .why__left__colLeft__detail h4 {
+  color: #fff;
+}
+.dark .why__left__colLeft__detail p {
+  color: #B7B7B7;
+}
+
+.dark .features__item .features-unit:hover {
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  transition: 0.3s ease-in;
+}
+.dark .features__item .features-unit-para h4 {
+  color: #fff;
+}
+.dark .features__item .features-unit-para p {
+  color: #B7B7B7;
+}
+
+.dark .footer__item h3 {
+  color: #fff;
+}
+.dark .footer__item p {
+  color: #B7B7B7;
+}
+.dark .footer__item p a {
+  color: #B7B7B7;
 }
 
 /*# sourceMappingURL=main.css.map */
